# SmartCharge

./: .gitattributes  README.md
avr/: CMakeLists.txt  README.md  build.bat
avr/boards/: leonardo.cmake  uno.cmake
avr/src/: main.cpp
avr/tools/commander/: commander.py
